# video-quick-trim

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: build.yml
electron/: main.js  preload.js
src/: main.js  preload.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/renderer/: index.html  renderer.js  styles.css
ui/: bridge.js  export-args.js  index.html  renderer.js  styles.css
